@@ -3,6 +3,7 @@ Changelog for HybridAuth.
 0.8.6 pl
 ==============
 - [#20] Improved work with context settings.
+- Fixed method makePlaceholders.
 
 0.8.5 pl4
 ==============
